Bug 107132 - [CI][GD,BL,PNV] drv_selftest@live_requests: live_all_engines failed with error -5
Summary: [CI][GD,BL,PNV] drv_selftest@live_requests: live_all_engines failed with erro...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: DRI git
Hardware: Other All
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-07-05 15:03 UTC by Tomi Sarvela
Modified: 2018-07-10 11:54 UTC (History)
1 user (show)

See Also:
i915 platform: G33, PNV
i915 features:


Attachments

Description Tomi Sarvela 2018-07-05 15:03:26 UTC
Intel-GFX-CI hosts are starting to run i915 selftests, and this bug is part of the series "Initial findings"

On old platforms the selftest drv_selftest@live_requests fails with:

[  923.405531] Setting dangerous option live_selftests - tainting kernel
[  931.788135] i915 0000:00:02.0: Resetting chip for hang on rcs0
[  931.793257] live_all_engines(): GPU was reset 1 times!
[  931.793706] i915/i915_request_live_selftests: live_all_engines failed with error -5
[  931.903141] i915: probe of 0000:00:02.0 failed with error -5

Full traces available at:

https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4432/fi-pnv-d510/igt@drv_selftest@live_requests.html

https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4433/fi-gdg-551/igt@drv_selftest@live_requests.html

https://intel-gfx-ci.01.org/tree/drm-tip/CI_DRM_4433/fi-blb-e6850/igt@drv_selftest@live_requests.html
Comment 1 Chris Wilson 2018-07-05 17:05:03 UTC
commit bb9e8755a4259a306cd1691b4e17c4c485d81c9e (HEAD -> drm-intel-next-queued, drm-intel/for-linux-next, drm-intel/drm-intel-next-queued)
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Thu Jul 5 16:47:56 2018 +0100

    drm/i915/selftests: Fixup recursive MI_BB_START for gen3
    
    There's no magic bit0 in MI_BB_START for gen3, it's the same dword length
    parameter as elsewhere and needs to be zero.
    
    v2: Same bug in both live_requests and live_hanghcheck.
    
    References: https://bugs.freedesktop.org/show_bug.cgi?id=107132
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
    Link: https://patchwork.freedesktop.org/patch/msgid/20180705154756.5533-1-chris@chris-wilson.co.uk
    Reviewed-by: Ville Syrjälä <ville.syrjala@linux.intel.com>
Comment 2 Martin Peres 2018-07-10 11:54:55 UTC
Seems fixed, thanks!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.